to see how stuff change

--- a/paru_user_guide.tex
+++ b/paru_user_guide.tex
@@ -37,6 +37,8 @@ Timothy A. Davis}
 
 \begin{abstract}
 
+    Here is a test
+
 ParU is an implementation of the multifrontal sparse LU factorization
 method.  Parallelism is exploited both in the BLAS and across different frontal
 matrices using OpenMP tasking, a shared-memory programming model for modern 
