--- a/paru_user_guide.bib
+++ b/paru_user_guide.bib
@@ -178,3 +178,24 @@ demonstrated on various architectures." }
 	,pages={359-392}
 	,annote={f. also TR-95-035, Dept. of Computer Science, Univ. of Minnesota, was KarypisKumar95a}
 }
+@article{10.1145/992200.992206,
+author = {Davis, Timothy A.},
+title = {Algorithm 832: UMFPACK V4.3---an Unsymmetric-Pattern Multifrontal Method},
+year = {2004},
+issue_date = {June 2004},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {30},
+number = {2},
+issn = {0098-3500},
+url = {https://doi.org/10.1145/992200.992206},
+doi = {10.1145/992200.992206},
+abstract = {An ANSI C code for sparse LU factorization is presented that combines a column pre-ordering strategy with a right-looking unsymmetric-pattern multifrontal numerical factorization. The pre-ordering and symbolic analysis phase computes an upper bound on fill-in, work, and memory usage during the subsequent numerical factorization. User-callable routines are provided for ordering and analyzing a sparse matrix, computing the numerical factorization, solving a system with the LU factors, transposing and permuting a sparse matrix, and converting between sparse matrix representations. The simple user interface shields the user from the details of the complex sparse factorization data structures by returning simple handles to opaque objects. Additional user-callable routines are provided for printing and extracting the contents of these opaque objects. An even simpler way to use the package is through its MATLAB interface. UMFPACK is incorporated as a built-in operator in MATLAB 6.5 as x = Ab when A is sparse and unsymmetric.},
+journal = {ACM Trans. Math. Softw.},
+month = {jun},
+pages = {196–199},
+numpages = {4},
+keywords = {sparse nonsymmetric matrices, multifrontal method, linear equations, ordering methods}
+}
+
+  
